prevent user search results, messageme text from overflowing borders

--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -3,6 +3,7 @@
 .user-search-results {
   li {
     padding: 10px 0 10px 15px;
+    box-sizing: border-box;
     &:hover {
       background-color: $darker-burlywood;
     }
@@ -21,6 +22,13 @@
   }
 }
 
+.truncate {
+  width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 #left-text-align {
   text-align: left;
 }
@@ -30,4 +38,8 @@
   background-color: black;
   color: yellow;
   padding: 5px;
+}
+
+.search {
+  height: 90%;
 }
