--- a/app/assets/stylesheets/sidebar.scss
+++ b/app/assets/stylesheets/sidebar.scss
@@ -1,6 +1,6 @@
 .sidebar {
   width: 15%;
-  height: 100%;
+  height: 100vh;
 }
 
 .sidebar__header {
